# LearnHaskellBook

./: FunctionWithWhere.hs  README.md  arith3broken.hs  chapter4.hs  chapter5types.hs  datatypes.hs  greetIfCool1.hs  greetIfCool2.hs  print2.hs  print4.hs  print4flipped.hs  print5broken.hs  reverse.hs  sing.hs  stringManip.hs  test.hs  typeInference2.hs
Chapter10/: 10_6exercises.hs  chapter10exerices.hs  scan_exercises.hs
Chapter11/: 11_15.hs  11_16exercises.hs  11_4ex.hs  11_5ex.hs  11_7ex.hs  ex_11_10.hs  ex_11_11.hs  ex_11_12.hs  ex_11_9.hs  test.txt
Chapter12/: 12_2exercises.hs
Chapter13/: 13_9_exercises.hs  13_OverviewExercises.hs
Chapter13/call-em-up/: call-em-up.cabal
Chapter13/hangman/: LICENSE  hangman.cabal
Chapter13/hello/: hello.cabal
Chapter14/MorseCodeStack/: MorseCodeStack.cabal
Chapter14/addition/: Addition.hs  addition.cabal
Chapter14/morse_code/: morseCode.cabal
Chapter14/wordNumber/: LICENSE  wordnumber.cabal
Chapter15/: ChapterExercises.hs  TestMonoid.hs
Chapter15/Exercises/: Exercises.cabal
Chapter15/monoidExercise/: monoidTest.hs
Chapter15/orphan-instance/: orphan-instance.cabal
Chapter16/: .16_17_exercises.hs.swp  16_17_exercises.hs  BadNat.hs  IntermissionExercises.hs  QuickCheckingFunctor.hs  ReplaceExperiment.hs  ScratchPad.hs
Chapter16/chapterexercises/: chapterexercises.cabal
Chapter16/my-project/: my-project.cabal  stack.yaml
Chapter17/: .177youknewthiswascoming.swp
Chapter17/177youknewthiswascoming/: .test.swo  177youknewthiswascoming.cabal  README.md
Chapter17/ChapterExercises/: ChapterExercises.cabal  README.md
Chapter17/Constant/: Constant.cabal  README.md
Chapter17/ShortExercises/: README.md  ShortExercises.cabal
Chapter18/chapterexercises/: .chapterexercises.cabal.swp  chapterexercises.cabal
Chapter21/chapterexercises/: README.md  chapterexercises.cabal
Chapter21/chapterexercises/src/: .Lib.hs.swp  Lib.hs
Chapter21/chapterexercises/test/: MainTests.hs
Chapter21/examplecode/: README.md  examplecode.cabal
Chapter21/examplecode/src/: AxingTediousCode.hs  HttpStuff.hs  Lib.hs  MyEithers.hs  QualityControl.hs
Chapter21/examplecode/test/: LibSpec.hs  QualityControlTests.hs
Chapter22/: ApplicativeOfFunctions.hs  ReaderPractice.hs  ReadingComprehension.hs  intermissionreader.hs
Chapter23/: FizzBuzz.hs  RandomExample.hs  RandomExample2.hs  chapterexercises.hs
Chapter25/: Chapter25.cabal
Chapter26/: Chapter26.cabal
Chapter27/: Chapter27.cabal
Chapter28/: Chapter28.cabal
Chapter6/: chapter6.hs
Chapter7/: arith2.hs  arith4.hs  caseExpressions.hs  chapter7.hs  greetIfCool.hs  higherOrderFunctions.hs  overviewExercises.hs  patternMatchingExercises.hs  registeredUser2.hs  registereduser1.hs
Chapter8/: bottom.hs  chapter8overall.hs  factorial.hs  wordNumber.hs
Chapter9/: StringSplitter.hs  chapter9Overview.hs  extractingPortionsOfLists.hs  myHead.hs  poemLines.hs  zippingLists.hs
call-em-up/: cabal.sandbox.config  call-em-up.cabal
hello/: cabal.sandbox.config  hello.cabal
(+92 files in other folders)
