name:                examplecode
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/examplecode
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , HttpStuff
                     , QualityControl
                     , AxingTediousCode
                     , MyEithers
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , wreq
                     , transformers

executable examplecode
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , examplecode

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibSpec.hs
  build-depends:       base
                     , examplecode
                     , hspec
                     , QuickCheck
                     , checkers
                     
source-repository head
  type:     git
  location: https://github.com/githubuser/examplecode
